# client-fulfillment-v2

./: .env.seo-test  .gitignore  .pre-commit-config.yaml  BACKUP_RESTORE_RUNBOOK.md  CLAUDE.md  FEATURE_SPEC.md  PHASE_12_AUTH_PLAN.md  PHASE_18B_PLAN.md  V2_REBUILD_PLAN.md  WIREFRAMES.md  brand_guideilnes_bible.md  close-task.sh  docker-compose.seo-test.yml  docker-compose.yml  prd.json  run-ralph.sh
backend/: .coverage  .env.example  Dockerfile  PLAN-remove-secondary-keywords-and-paa.md  Procfile  RAILWAY_ENV.md  README.md  alembic.ini  entrypoint.sh  pyproject.toml  railway.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_projects_table.py  0002_create_crawled_pages_table.py  0003_create_page_keywords_table.py  0004_create_page_paa_table.py  0005_create_brand_configs_table.py  0006_create_generated_content_table.py  0007_create_crawl_schedules_table.py  0008_create_crawl_history_table.py  0009_create_nlp_analysis_cache_table.py  0010_create_notification_tables.py  0011_create_competitors_table.py  0012_create_content_briefs_table.py  0013_create_content_scores_table.py  0014_add_brand_wizard_state_column.py  0015_rename_project_phases.py  0016_add_site_url_to_projects.py  0017_create_project_files_table.py  0018_add_additional_info_to_projects.py  0019_add_crawl_status_and_extraction_fields.py  0020_add_page_keywords_approval_fields.py  0021_create_page_contents_and_prompt_logs.py  0022_add_page_contents_approval_fields.py  0023_add_keyword_clusters_and_cluster_pages.py  0024_create_internal_links_table.py  0025_create_link_plan_snapshots_table.py  0026_create_blog_tables.py  0027_create_reddit_tables.py  0028_add_reddit_only_to_projects.py  0029_add_shopify_fields_to_projects.py  0030_create_shopify_pages_table.py  0031_add_onboarding_batch.py  0032_add_outline_fields.py  0033_create_vertical_bibles.py  0034_add_source_to_keyword_clusters.py  0035_blog_campaign_seed_keyword.py  20260210_1655_da1ea5f253b0_widen_internal_links_status_column_to_.py
backend/app/: __init__.py  deploy.py  main.py
backend/app/clients/: __init__.py  websocket_client.py
backend/app/core/: __init__.py  auth.py  circuit_breaker.py  config.py  data_integrity.py  database.py  logging.py  redis.py  scheduler.py  shopify_crypto.py  websocket.py
backend/app/integrations/: __init__.py  amazon_reviews.py  claude.py  crawl4ai.py  crowdreply.py  dataforseo.py  email.py  google_docs.py  google_nlp.py  keywords_everywhere.py  perplexity.py  pop.py  review_platforms.py  s3.py  serpapi.py  shopify.py  webhook.py  wordpress.py
backend/app/models/: __init__.py  blog.py  brand_config.py  competitor.py  content_brief.py  content_score.py  crawl_history.py  crawl_schedule.py  crawled_page.py  crowdreply_task.py  generated_content.py  internal_link.py  keyword_cluster.py  nlp_analysis_cache.py  notification.py  page_content.py  page_keywords.py  page_paa.py  project.py  project_file.py  prompt_log.py  reddit_account.py  reddit_comment.py  reddit_config.py  reddit_post.py  shopify_page.py  vertical_bible.py
backend/app/repositories/: __init__.py  brand_config.py  competitor.py  crawl.py  notification.py  project.py  schedule.py
backend/app/schemas/: __init__.py  amazon_reviews.py  blog.py  brand_config.py  brand_config_generation.py  brand_config_v3.py  categorize.py  cluster.py  competitor.py  content_brief.py  content_generation.py  content_plan.py  content_quality.py  content_score.py  content_word_count.py  content_writer.py  crawl.py  crawled_page.py  document.py  internal_link.py  label.py  nlp.py  (+13 more)
backend/client_fulfillment_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/docs/: LOGGING.md  POP_INTEGRATION.md
backend/grove.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/scripts/: test_dataforseo.py
backend/tests/: __init__.py  conftest.py  test_cluster_api.py  test_cluster_keyword_service.py  test_export.py  test_export_api.py  test_fixtures.py  test_link_injection.py  test_link_pipeline_integration.py  test_link_planning.py  test_link_validation.py  test_links_api.py  test_reddit_api.py  test_reddit_discovery.py  test_reddit_models.py
(+781 files in other folders)
